--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "super-split",
-	"main": "super-split",
+	"main": "index.js",
 	"version": "1.1.0",
 	"description": "🔪  split string by delimiter array - delimiters retained",
 	"license": "MIT",
